--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@aws-sdk/client-s3": "^3.34.0",
     "@sendgrid/mail": "^7.4.4",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
+    "express-xss-sanitizer": "^1.1.1",
     "helmet": "^5.0.2",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.7",
     "redis": "^4.0.4",
+    "toobusy-js": "^0.5.1",
     "twilio": "^3.68.0",
     "uuid": "^8.3.2",
     "validator": "^13.1.17"
